--- a/product_impacts/exploratory/labelling.ipynb
+++ b/product_impacts/exploratory/labelling.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ndns_edited = pd.read_csv('../../future_of_food/NDNS UK/ndns_edited.csv', encoding='unicode_escape')\n",
+    "ndns_edited = pd.read_csv('../../SFS/NDNS UK/ndns_edited.csv', encoding='unicode_escape')\n",
     "ndns_edited.loc[ndns_edited['subfoodgroupdesc_edited'].notnull(), \n",
     "                'subfoodgroupdesc'] = ndns_edited[ndns_edited['subfoodgroupdesc_edited'].notnull()]['subfoodgroupdesc_edited']\n",
     "ndns_edited = ndns_edited.drop(['subfoodgroupdesc_edited'], axis=1)"
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = pd.read_csv('../../future_of_food/NDNS UK/predictions_all_LDA_HI.csv')"
+    "predictions = pd.read_csv('../../SFS/NDNS UK/predictions_all_LDA_HI.csv')"
    ]
   },
   {
@@ -220,7 +220,7 @@
     "        df = to_label.iloc[i*500:,:]\n",
     "    else:\n",
     "        df = to_label.iloc[i*500:(i+1)*500,:]\n",
-    "    fname = f'../../future_of_food/NDNS UK/labelling_exercise/sample_{i+1}.xlsx'\n",
+    "    fname = f'../../SFS/NDNS UK/labelling_exercise/sample_{i+1}.xlsx'\n",
     "    write_to_excel(df, fname)"
    ]
   },
