--- a/product_impacts/exploratory/scores.ipynb
+++ b/product_impacts/exploratory/scores.ipynb
@@ -28,8 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lda = pd.read_csv('../../../../future_of_food/NDNS UK/predictions/predictions_all_LDA_v1.csv')\n",
-    "lda_hi = pd.read_csv('../../../../future_of_food/NDNS UK/predictions/predictions_all_LDA_HI_v1.csv')"
+    "lda = pd.read_csv('../../../../SFS/NDNS UK/predictions/predictions_all_LDA_v1.csv')\n",
+    "lda_hi = pd.read_csv('../../../../SFS/NDNS UK/predictions/predictions_all_LDA_HI_v1.csv')"
    ]
   },
   {
@@ -141,7 +141,7 @@
     }
    ],
    "source": [
-    "products = pd.read_csv('../../../../future_of_food/foodDB_23June/products.csv', usecols= [\n",
+    "products = pd.read_csv('../../../../SFS/foodDB_23June/products.csv', usecols= [\n",
     "    'product_id', 'snapshot_id', 'product_list_name', 'product_name', 'url',\n",
     "    'ingredients_text', 'energy_per_100', 'fat_per_100',\n",
     "    'saturates_per_100', 'salt_per_100', 'sugar_per_100',\n",
@@ -600,7 +600,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lda_f1 = pd.read_csv('../../../../future_of_food/NDNS UK/predictions/predictions_all_LDA_v1_f1.csv')\n",
+    "lda_f1 = pd.read_csv('../../../../SFS/NDNS UK/predictions/predictions_all_LDA_v1_f1.csv')\n",
     "lda_f1 = lda.merge(products[['product_id', 'ingredients_text']])\n",
     "\n",
     "lda_f1['ingredients'] = 1\n",
