--- a/product_impacts/impacts_pipe_io/clean_ingredients_data.ipynb
+++ b/product_impacts/impacts_pipe_io/clean_ingredients_data.ipynb
@@ -67,9 +67,9 @@
     }
    ],
    "source": [
-    "fdb = pd.read_csv('../../future_of_food/NDNS UK/predictions/all_predictions_15Oct2024.csv')\n",
+    "fdb = pd.read_csv('../../SFS/NDNS UK/predictions/all_predictions_15Oct2024.csv')\n",
     "\n",
-    "products1 = pd.read_csv('../../future_of_food/all_fooddb_data_extracts/Extract_2019/foodDB_Raw/products.csv', usecols= [\n",
+    "products1 = pd.read_csv('../../SFS/all_fooddb_data_extracts/Extract_2019/foodDB_Raw/products.csv', usecols= [\n",
     "    'product_id', 'product_list_name', 'product_name', 'ingredients_text',  \n",
     "    'energy_per_100', 'fat_per_100', 'saturates_per_100', 'salt_per_100', \n",
     "    'sugar_per_100', 'carbohydrate_per_100', 'protein_per_100', 'fibre_per_100',\n",
@@ -77,7 +77,7 @@
     "    'serving': 'serving_size', \n",
     "    'serving_value': 'serving_size_value', \n",
     "    'serving_unit': 'serving_size_unit'})\n",
-    "products2 = pd.read_csv('../../future_of_food/all_fooddb_data_extracts/Extract_2021/foodDB_dat/products.csv', usecols= [\n",
+    "products2 = pd.read_csv('../../SFS/all_fooddb_data_extracts/Extract_2021/foodDB_dat/products.csv', usecols= [\n",
     "    'product_id', 'product_list_name', 'product_name', 'ingredients_text', \n",
     "    'energy_per_100', 'fat_per_100', 'saturates_per_100', 'salt_per_100', \n",
     "    'sugar_per_100', 'carbohydrate_per_100', 'protein_per_100', 'fibre_per_100',\n",
@@ -85,7 +85,7 @@
     "    'serving': 'serving_size', \n",
     "    'serving_value': 'serving_size_value', \n",
     "    'serving_unit': 'serving_size_unit'})\n",
-    "products3 = pd.read_csv('../../future_of_food/all_fooddb_data_extracts/Extract_2022/May_2022_Extract/products.csv',  usecols= [\n",
+    "products3 = pd.read_csv('../../SFS/all_fooddb_data_extracts/Extract_2022/May_2022_Extract/products.csv',  usecols= [\n",
     "    'foodDB_product_id', 'product_list_name', 'product_name', 'ingredients_list', \n",
     "    'Energy', 'Fat', 'Saturates', 'Salt', 'Sugar', 'Carbohydrate', 'Fibre', 'Protein',\n",
     "    'serving_size', 'serving_size_value', 'serving_size_unit']).rename(columns={\n",
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "7e356887-c12d-41f9-9894-598b0d14104e",
    "metadata": {},
    "outputs": [
@@ -219,8 +219,8 @@
    ],
    "source": [
     "# it is okay to just go with the neaural network oredictions and impose a 0.8 threshold (maybe this is too conservative, can rethink)\n",
-    "off = pd.read_csv('../../future_of_food/openfoodfacts/all/openfoodfacts_lang.csv')\n",
-    "# off_non_eng1 = pd.read_csv('../../future_of_food/openfoodfacts/all/openfoodfacts_non_eng1_temp.csv')\n",
+    "off = pd.read_csv('../../SFS/openfoodfacts/all/openfoodfacts_lang.csv')\n",
+    "# off_non_eng1 = pd.read_csv('../../SFS/openfoodfacts/all/openfoodfacts_non_eng1_temp.csv')\n",
     "\n",
     "# off_whole = off_whole[~off_whole['product_id'].isin(off_non_eng1['product_id'].unique())]\n",
     "# off = pd.concat([off_whole, off_non_eng1], axis=0, ignore_index=True)\n",
@@ -242,7 +242,7 @@
     "preds = []\n",
     "\n",
     "for prefix in ['eng/', 'non_eng/']:\n",
-    "    pred = pd.read_csv(f'../../future_of_food/openfoodfacts/all/predictions/{prefix}predictions_nn.csv')\n",
+    "    pred = pd.read_csv(f'../../SFS/openfoodfacts/all/predictions/{prefix}predictions_nn.csv')\n",
     "\n",
     "    pred = pred[(pred['parentcategory_prob']>0.8)\n",
     "                      & ((pred['subfoodgroup_prob'].isna()) | (pred['subfoodgroup_prob']>0.8))]\n",
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "3d27ed88-c097-48e8-b72e-baf9c8a8fb99",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "7c2aa6b1-a6c6-4c97-b369-6f0d73e0bc9f",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "dc0cc7bb-6c2f-49f4-ac26-4e6b06f9d31f",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
        "(851860, 22)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "178ce711-4015-43ee-84d6-04d09f99102a",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
        "(668994, 22)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "86185ce2-540d-4a56-a3ab-befbddb45f6a",
    "metadata": {},
    "outputs": [
@@ -404,7 +404,7 @@
        "Name: countries_en, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "0a1bc0bd-4045-464c-bf0b-28a37ef085cc",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
        "Name: countries_en, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "f251ef48-abcf-4157-b720-c82493a0733e",
    "metadata": {},
    "outputs": [
@@ -538,7 +538,7 @@
        "Name: parentcategory, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "d310e017-208d-4c37-a6f7-eefa2cb6edc1",
    "metadata": {},
    "outputs": [
@@ -898,7 +898,7 @@
        "United States                                37664                 22438  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2924,13 +2924,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "products_cats.to_csv('../../future_of_food/environmental_impacts/Products_dat/products_categories.csv', index=False)"
+    "products_cats.to_csv('../../SFS/environmental_impacts/Products_dat/products_categories.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e7363d8-fbfe-4ac0-ad0f-e265dfb20bf6",
+   "id": "d86ec794-d482-481f-9e24-a4e5d69d2ede",
    "metadata": {},
    "outputs": [],
    "source": []
