--- a/product_impacts/ml_pipeline/open_food_facts.ipynb
+++ b/product_impacts/ml_pipeline/open_food_facts.ipynb
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "# enter path here\n",
-    "data_dir = '../../future_of_food/openfoodfacts/all/'"
+    "data_dir = '../../SFS/openfoodfacts/all/'"
    ]
   },
   {
