--- a/product_impacts/ml_pipeline/validation.ipynb
+++ b/product_impacts/ml_pipeline/validation.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[34mproduct_impacts\u001b[m\u001b[m test.csv\n"
+      "\u001b[34mproduct_impacts\u001b[m\u001b[m\n"
      ]
     }
    ],
@@ -52,13 +52,13 @@
    "outputs": [],
    "source": [
     "# enter path here\n",
-    "data_dir = '../../future_of_food/openfoodfacts/all/'\n",
+    "data_dir = '../../SFS/openfoodfacts/all/'\n",
     "prefix = 'eng/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "0ad72838-1890-45ab-98a4-c5aea110a75a",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "bab497b6-87d8-4755-84ea-99525a921d00",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
        "(755225, 8)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "889bcc43-2bc5-4d7a-b4ef-a94ff0d81ad3",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
        "Name: subfoodgroup, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6991,7 +6991,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7114c1f2-29a6-4160-bc78-0f9298d6e337",
+   "id": "018ecf5c-98c7-4469-8c75-7804e83e0a86",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2099a83-3289-4758-a434-b7cd990bb91e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68f7c80b-19b8-4471-ac35-985281fed577",
    "metadata": {},
    "outputs": [],
    "source": []
