--- a/product_impacts/product_cat/all_preds.ipynb
+++ b/product_impacts/product_cat/all_preds.ipynb
@@ -49,18 +49,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lev0 = pd.read_csv('../../future_of_food/NDNS UK/predictions/predictions_lev0_manuallabels_nonHI_RF_withcorrections_14Oct2024.csv')\n",
-    "bev = pd.read_csv('../../future_of_food/NDNS UK/predictions/predictions_bev_lev2_manuallabels_nonHI_RF_15Oct2024.csv')\n",
-    "cereals = pd.read_csv('../../future_of_food/NDNS UK/predictions/predictions_cereals_lev2_manuallabels_nonHI_RF_15Oct2024.csv')\n",
-    "eggs = pd.read_csv('../../future_of_food/NDNS UK/predictions/predictions_egg_lev2_manuallabels_nonHI_RF_15Oct2024.csv')\n",
-    "fats = pd.read_csv('../../future_of_food/NDNS UK/predictions/predictions_fats_lev2_manuallabels_nonHI_RF_15Oct2024.csv')\n",
-    "fish = pd.read_csv('../../future_of_food/NDNS UK/predictions/predictions_fish_lev2_manuallabels_nonHI_RF_15Oct2024.csv')\n",
-    "fruit = pd.read_csv('../../future_of_food/NDNS UK/predictions/predictions_fruit_lev2_manuallabels_nonHI_RF_15Oct2024.csv')\n",
-    "meat = pd.read_csv('../../future_of_food/NDNS UK/predictions/predictions_meat_lev2_manuallabels_nonHI_RF_15Oct2024.csv')\n",
-    "milk = pd.read_csv('../../future_of_food/NDNS UK/predictions/predictions_milk_lev2_manuallabels_nonHI_RF_15Oct2024.csv')\n",
-    "misc = pd.read_csv('../../future_of_food/NDNS UK/predictions/predictions_misc_lev2_manuallabels_nonHI_RF_15Oct2024.csv')\n",
-    "sugar = pd.read_csv('../../future_of_food/NDNS UK/predictions/predictions_sugar_lev2_manuallabels_nonHI_RF_15Oct2024.csv')\n",
-    "veg = pd.read_csv('../../future_of_food/NDNS UK/predictions/predictions_veg_lev2_manuallabels_nonHI_RF_15Oct2024.csv')"
+    "lev0 = pd.read_csv('../../SFS/NDNS UK/predictions/predictions_lev0_manuallabels_nonHI_RF_withcorrections_14Oct2024.csv')\n",
+    "bev = pd.read_csv('../../SFS/NDNS UK/predictions/predictions_bev_lev2_manuallabels_nonHI_RF_15Oct2024.csv')\n",
+    "cereals = pd.read_csv('../../SFS/NDNS UK/predictions/predictions_cereals_lev2_manuallabels_nonHI_RF_15Oct2024.csv')\n",
+    "eggs = pd.read_csv('../../SFS/NDNS UK/predictions/predictions_egg_lev2_manuallabels_nonHI_RF_15Oct2024.csv')\n",
+    "fats = pd.read_csv('../../SFS/NDNS UK/predictions/predictions_fats_lev2_manuallabels_nonHI_RF_15Oct2024.csv')\n",
+    "fish = pd.read_csv('../../SFS/NDNS UK/predictions/predictions_fish_lev2_manuallabels_nonHI_RF_15Oct2024.csv')\n",
+    "fruit = pd.read_csv('../../SFS/NDNS UK/predictions/predictions_fruit_lev2_manuallabels_nonHI_RF_15Oct2024.csv')\n",
+    "meat = pd.read_csv('../../SFS/NDNS UK/predictions/predictions_meat_lev2_manuallabels_nonHI_RF_15Oct2024.csv')\n",
+    "milk = pd.read_csv('../../SFS/NDNS UK/predictions/predictions_milk_lev2_manuallabels_nonHI_RF_15Oct2024.csv')\n",
+    "misc = pd.read_csv('../../SFS/NDNS UK/predictions/predictions_misc_lev2_manuallabels_nonHI_RF_15Oct2024.csv')\n",
+    "sugar = pd.read_csv('../../SFS/NDNS UK/predictions/predictions_sugar_lev2_manuallabels_nonHI_RF_15Oct2024.csv')\n",
+    "veg = pd.read_csv('../../SFS/NDNS UK/predictions/predictions_veg_lev2_manuallabels_nonHI_RF_15Oct2024.csv')"
    ]
   },
   {
@@ -464,13 +464,21 @@
     "       'subfoodgroup_lab', 'parentcategory_pred', 'mainfoodgroup_pred', \n",
     "       'subfoodgroup_pred', 'tsne_0', 'tsne_1']\n",
     "\n",
-    "all_preds[cols].to_csv('../../future_of_food/NDNS UK/predictions/all_predictions_15Oct2024.csv', index=False)"
+    "all_preds[cols].to_csv('../../SFS/NDNS UK/predictions/all_predictions_15Oct2024.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47b22ce1-42f7-40cf-b076-c6c4b65eea1c",
+   "id": "020cee00-8009-4ad9-be12-ae2a536175b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b93f2e5-091e-4664-8a6e-a1cec4542303",
    "metadata": {},
    "outputs": [],
    "source": []
