--- a/product_impacts/product_cat/beverage.ipynb
+++ b/product_impacts/product_cat/beverage.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "id": "ecbbb64c-e52f-4f2d-8ae6-1cc348ddc169",
    "metadata": {},
    "outputs": [],
@@ -32,6 +32,7 @@
     "from skimpy import skim\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
+    "import statistics\n",
     "from sentence_transformers import SentenceTransformer, util\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.manifold import TSNE\n",
@@ -45,7 +46,7 @@
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.metrics import accuracy_score, matthews_corrcoef, f1_score, mean_squared_error, r2_score, roc_auc_score, balanced_accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, matthews_corrcoef, f1_score, mean_squared_error, r2_score, roc_auc_score, balanced_accuracy_score, precision_score, recall_score\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sklearn import preprocessing\n",
     "from sklearn.feature_selection import mutual_info_classif\n",
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d501d8fb-9b8c-4c3c-8e42-f86a37401f5e",
    "metadata": {},
    "outputs": [],
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "296ced90-f2ab-4ce3-acab-934a5b6f2424",
    "metadata": {},
    "outputs": [],
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6de2a6cf-08a5-4da6-b243-3b541b41094f",
    "metadata": {},
    "outputs": [
@@ -100,15 +101,15 @@
     }
    ],
    "source": [
-    "ndns = get_ndns_cats('../../future_of_food/NDNS UK/ndns_edited.csv')\n",
-    "products = get_products('../../future_of_food/foodDB_23June/products.csv')\n",
+    "ndns = get_ndns_cats('../../SFS/NDNS UK/ndns_edited.csv')\n",
+    "products = get_products()\n",
     "labelled_data, non_food_products = get_ndns_matches(\n",
     "    ndns, products)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "8874d1c8-b568-453a-ac59-de07056bca5d",
    "metadata": {},
    "outputs": [],
@@ -122,18 +123,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "619310fc-f160-47bc-ae1a-d6b298b80662",
    "metadata": {},
    "outputs": [],
    "source": [
     "# lev 0 predictions\n",
-    "predicted_data = pd.read_csv('../../future_of_food/NDNS UK/predictions/predictions_lev0_manuallabels_nonHI_RF_withcorrections_14Oct2024.csv')"
+    "predicted_data = pd.read_csv('../../SFS/NDNS UK/predictions/predictions_lev0_manuallabels_nonHI_RF_withcorrections_14Oct2024.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "7c91162c-a459-4e4b-8eeb-242321207fb5",
    "metadata": {},
    "outputs": [
@@ -143,7 +144,7 @@
        "(262711, 11)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "40c9d12c-838f-4d37-8c6f-4b785117546a",
    "metadata": {},
    "outputs": [
@@ -171,7 +172,7 @@
        "Alcoholic Beverages                     15150\n",
        "Fish and Fish Dishes                     9302\n",
        "Fruit                                    7343\n",
-       "Savoury Snacks                           6453\n",
+       "Savoury Snacks                           6460\n",
        "Not Food                                 5086\n",
        "Nuts and Seeds                           5057\n",
        "Fat Spreads                              3811\n",
@@ -179,11 +180,10 @@
        "Eggs and Egg Dishes                      1315\n",
        "Dietary Supplements                       622\n",
        "Artificial Sweeteners                     404\n",
-       "Savoury Snack                               7\n",
        "Name: parentcategory_pred, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "3e9c00b8-fde8-4c77-af23-23e8d68c5a66",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "af85d92e-6f67-4a2c-a02f-427c9a7ee174",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
        "(25994, 11)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "2481297b-32d2-4087-9327-152da4c1a3e7",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
        "(7087, 12)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "db3ff309-1d4f-496f-93b6-24377ebf4ebd",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "Name: subfoodgroupdesc, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "27094b38-ea3c-42ce-b49b-3ad200a0a396",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
        "Name: mainfoodgroupdesc, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "161029ef-16ce-43d2-bb7c-65c508b93817",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
        "Name: subfoodgroup_lab, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "e9e2b861-9deb-4cb1-9a40-e59cb3ec1c90",
    "metadata": {},
    "outputs": [],
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "c97b5757-e01e-4106-ba62-233b37185c99",
    "metadata": {},
    "outputs": [],
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "049b4057-9283-432f-82b1-a60d3d5c7a62",
    "metadata": {},
    "outputs": [
@@ -720,7 +720,7 @@
        "Name: subfoodgroupdesc, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "e4e117df-4b6d-48e3-ae90-47634ad8ec43",
    "metadata": {},
    "outputs": [
@@ -745,7 +745,7 @@
        "Name: mainfoodgroupdesc, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "b46bba34-d93b-45a0-a2cb-bc64322a99bc",
    "metadata": {},
    "outputs": [
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "fb78cc08-e1a3-4fa6-817f-4a5863ce2753",
    "metadata": {},
    "outputs": [],
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "ae713996-5f81-4dd2-89b4-a9538387a08d",
    "metadata": {},
    "outputs": [],
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "c5222ffa-42a8-41db-aa27-c7fa5be52292",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1203,7 @@
        "(8042, 12)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "b8398622-22d5-4bed-b052-3c2965ab8ca4",
    "metadata": {},
    "outputs": [
@@ -1236,7 +1236,7 @@
        "Name: subfoodgroupdesc, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "6e6fb25b-efca-4f40-bc68-e15e04c34eb4",
    "metadata": {},
    "outputs": [],
@@ -1261,14 +1261,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "dbc8209c-6c91-4fec-a05d-b1855dd053df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_embeddings = np.load('../../future_of_food/bert/all_embeddings_all3.npy')\n",
-    "tsne_results = get_tsne(query_embeddings, '../../future_of_food/bert/tsne_results_all3.npy')\n",
-    "product_ids = np.load('../../future_of_food/bert/all_ids_all3.npy')\n",
+    "query_embeddings = np.load('../../SFS/bert/all_embeddings_all3.npy')\n",
+    "tsne_results = get_tsne(query_embeddings, '../../SFS/bert/tsne_results_all3.npy')\n",
+    "product_ids = np.load('../../SFS/bert/all_ids_all3.npy')\n",
     "\n",
     "features = pd.DataFrame(data=query_embeddings)\n",
     "id_col = 'product_id'\n",
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "id": "2e2101da-22e9-4d4a-b19b-ddf9a0b6b780",
    "metadata": {},
    "outputs": [
@@ -1295,15 +1295,15 @@
       "Number of unique level 2 categories in train: 12\n",
       "Number of unique level 2 categories in test: 12\n",
       "\n",
-      "Lev 1 train accuracy: 0.9872875500898162\n",
-      "Lev 1 train balanced accuracy: 0.98629770063975\n",
-      "Lev 1 test accuracy: 0.9316770186335404\n",
-      "Lev 1 test balanced accuracy: 0.9233010024592716\n",
+      "Lev 1 train accuracy: 0.9875641224933934\n",
+      "Lev 1 train balanced accuracy: 0.9855156319675299\n",
+      "Lev 1 test accuracy: 0.925419515226849\n",
+      "Lev 1 test balanced accuracy: 0.920297205133037\n",
       "\n",
-      "Lev 2 train accuracy: 0.9773386762470637\n",
-      "Lev 2 train balanced accuracy: 0.9814301753344795\n",
-      "Lev 2 test accuracy: 0.8956521739130435\n",
-      "Lev 2 test balanced accuracy: 0.9055174345646132\n",
+      "Lev 2 train accuracy: 0.9759054873309498\n",
+      "Lev 2 train balanced accuracy: 0.9803969778133835\n",
+      "Lev 2 test accuracy: 0.8881292728402734\n",
+      "Lev 2 test balanced accuracy: 0.8940351871498552\n",
       "\n",
       "Number of unique level 1 categories predicted in train: 4\n",
       "Number of unique level 1 categories predicted in test: 4\n",
@@ -1314,8 +1314,22 @@
     }
    ],
    "source": [
+    "acc_list_train = []\n",
+    "bal_acc_list_train = []\n",
+    "precision_list_train = []\n",
+    "recall_list_train = []\n",
+    "f1_list_train = []\n",
+    "mcc_list_train = []\n",
+    "\n",
+    "acc_list_test = []\n",
+    "bal_acc_list_test = []\n",
+    "precision_list_test = []\n",
+    "recall_list_test = []\n",
+    "f1_list_test = []\n",
+    "mcc_list_test = []\n",
+    "\n",
     "for i in range(1):\n",
-    "    train, test = train_test_split(lab, test_size=0.1, random_state=i)\n",
+    "    train, test = train_test_split(lab, test_size=0.2, random_state=i)\n",
     "    print(f'Number of unique level 1 categories in train: {train[y_cols[1]].nunique()}')\n",
     "    print(f'Number of unique level 1 categories in test: {test[y_cols[1]].nunique()}')\n",
     "    print(f'Number of unique level 2 categories in train: {train[y_cols[2]].nunique()}')\n",
@@ -1360,7 +1374,66 @@
     "    print(f'Number of unique level 1 categories predicted in train: {len(np.unique(y_train_pred1))}')\n",
     "    print(f'Number of unique level 1 categories predicted in test: {len(np.unique(y_test_pred1))}')    \n",
     "    print(f'Number of unique level 2 categories predicted in train: {len(np.unique(y_train_pred2))}')\n",
-    "    print(f'Number of unique level 2 categories predicted in test: {len(np.unique(y_test_pred2))}\\n')    "
+    "    print(f'Number of unique level 2 categories predicted in test: {len(np.unique(y_test_pred2))}\\n')    \n",
+    "    \n",
+    "    acc_list_train.append(accuracy_score(y_train2, y_train_pred2))\n",
+    "    bal_acc_list_train.append(balanced_accuracy_score(y_train2, y_train_pred2))\n",
+    "    precision_list_train.append(precision_score(y_train2, y_train_pred2, average='weighted'))\n",
+    "    recall_list_train.append(recall_score(y_train2, y_train_pred2, average='weighted'))\n",
+    "    f1_list_train.append(f1_score(y_train2, y_train_pred2, average='weighted'))\n",
+    "    mcc_list_train.append(matthews_corrcoef(y_train2, y_train_pred2))\n",
+    "    \n",
+    "    acc_list_test.append(accuracy_score(y_test2, y_test_pred2))\n",
+    "    bal_acc_list_test.append(balanced_accuracy_score(y_test2, y_test_pred2))\n",
+    "    precision_list_test.append(precision_score(y_test2, y_test_pred2, average='weighted'))\n",
+    "    recall_list_test.append(recall_score(y_test2, y_test_pred2, average='weighted'))\n",
+    "    f1_list_test.append(f1_score(y_test2, y_test_pred2, average='weighted'))\n",
+    "    mcc_list_test.append(matthews_corrcoef(y_test2, y_test_pred2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "1720ef34-8941-4f6b-9fc8-d49051a1c6f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train\n",
+      "accuracy: 0.9759054873309498\n",
+      "balanced accuracy: 0.9803969778133835\n",
+      "precision: 0.9766910745411063\n",
+      "recall: 0.9759054873309498\n",
+      "f1: 0.9759748638685555\n",
+      "mcc: 0.9731932642066835\n",
+      "test\n",
+      "accuracy: 0.8881292728402734\n",
+      "balanced accuracy: 0.8940351871498552\n",
+      "precision: 0.8925822732972248\n",
+      "recall: 0.8881292728402734\n",
+      "f1: 0.8888033493942948\n",
+      "mcc: 0.8755516456295673\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('train')\n",
+    "print(f'accuracy: {statistics.mean(acc_list_train)}')\n",
+    "print(f'balanced accuracy: {statistics.mean(bal_acc_list_train)}')\n",
+    "print(f'precision: {statistics.mean(precision_list_train)}')\n",
+    "print(f'recall: {statistics.mean(recall_list_train)}')\n",
+    "print(f'f1: {statistics.mean(f1_list_train)}')\n",
+    "print(f'mcc: {statistics.mean(mcc_list_train)}')\n",
+    "\n",
+    "print('test')\n",
+    "print(f'accuracy: {statistics.mean(acc_list_test)}')\n",
+    "print(f'balanced accuracy: {statistics.mean(bal_acc_list_test)}')\n",
+    "print(f'precision: {statistics.mean(precision_list_test)}')\n",
+    "print(f'recall: {statistics.mean(recall_list_test)}')\n",
+    "print(f'f1: {statistics.mean(f1_list_test)}')\n",
+    "print(f'mcc: {statistics.mean(mcc_list_test)}')"
    ]
   },
   {
@@ -1538,7 +1611,7 @@
    "outputs": [],
    "source": [
     "# save level 2 cereal categories\n",
-    "pred.to_csv('../../future_of_food/NDNS UK/predictions/predictions_bev_lev2_manuallabels_nonHI_RF_15Oct2024.csv', \n",
+    "pred.to_csv('../../SFS/NDNS UK/predictions/predictions_bev_lev2_manuallabels_nonHI_RF_15Oct2024.csv', \n",
     "                      index=False)"
    ]
   },
