--- a/product_impacts/product_cat/cereals.ipynb
+++ b/product_impacts/product_cat/cereals.ipynb
@@ -32,6 +32,7 @@
     "from skimpy import skim\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
+    "import statistics\n",
     "from sentence_transformers import SentenceTransformer, util\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.manifold import TSNE\n",
@@ -45,7 +46,7 @@
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.metrics import accuracy_score, matthews_corrcoef, f1_score, mean_squared_error, r2_score, roc_auc_score, balanced_accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, matthews_corrcoef, f1_score, mean_squared_error, r2_score, roc_auc_score, balanced_accuracy_score, precision_score, recall_score\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sklearn import preprocessing\n",
     "from sklearn.feature_selection import mutual_info_classif\n",
@@ -100,8 +101,8 @@
     }
    ],
    "source": [
-    "ndns = get_ndns_cats('../../future_of_food/NDNS UK/ndns_edited.csv')\n",
-    "products = get_products('../../future_of_food/foodDB_23June/products.csv')\n",
+    "ndns = get_ndns_cats('../../SFS/NDNS UK/ndns_edited.csv')\n",
+    "products = get_products()\n",
     "labelled_data, non_food_products = get_ndns_matches(\n",
     "    ndns, products)"
    ]
@@ -128,7 +129,7 @@
    "outputs": [],
    "source": [
     "# lev 0 predictions\n",
-    "predicted_data = pd.read_csv('../../future_of_food/NDNS UK/predictions/predictions_lev0_manuallabels_nonHI_RF_withcorrections_14Oct2024.csv')"
+    "predicted_data = pd.read_csv('../../SFS/NDNS UK/predictions/predictions_lev0_manuallabels_nonHI_RF_withcorrections_14Oct2024.csv')"
    ]
   },
   {
@@ -171,7 +172,7 @@
        "Alcoholic Beverages                     15150\n",
        "Fish and Fish Dishes                     9302\n",
        "Fruit                                    7343\n",
-       "Savoury Snacks                           6453\n",
+       "Savoury Snacks                           6460\n",
        "Not Food                                 5086\n",
        "Nuts and Seeds                           5057\n",
        "Fat Spreads                              3811\n",
@@ -179,7 +180,6 @@
        "Eggs and Egg Dishes                      1315\n",
        "Dietary Supplements                       622\n",
        "Artificial Sweeteners                     404\n",
-       "Savoury Snack                               7\n",
        "Name: parentcategory_pred, dtype: int64"
       ]
      },
@@ -1258,9 +1258,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_embeddings = np.load('../../future_of_food/bert/all_embeddings_all3.npy')\n",
-    "tsne_results = get_tsne(query_embeddings, '../../future_of_food/bert/tsne_results_all3.npy')\n",
-    "product_ids = np.load('../../future_of_food/bert/all_ids_all3.npy')\n",
+    "query_embeddings = np.load('../../SFS/bert/all_embeddings_all3.npy')\n",
+    "tsne_results = get_tsne(query_embeddings, '../../SFS/bert/tsne_results_all3.npy')\n",
+    "product_ids = np.load('../../SFS/bert/all_ids_all3.npy')\n",
     "\n",
     "features = pd.DataFrame(data=query_embeddings)\n",
     "id_col = 'product_id'\n",
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "2e2101da-22e9-4d4a-b19b-ddf9a0b6b780",
    "metadata": {},
    "outputs": [
@@ -1298,15 +1298,15 @@
       "Number of unique level 2 categories in train: 16\n",
       "Number of unique level 2 categories in test: 16\n",
       "\n",
-      "Lev 1 train accuracy: 0.9971426303674895\n",
-      "Lev 1 train balanced accuracy: 0.9977948443785422\n",
-      "Lev 1 test accuracy: 0.9571428571428572\n",
-      "Lev 1 test balanced accuracy: 0.9485546361566005\n",
+      "Lev 1 train accuracy: 0.976426466648808\n",
+      "Lev 1 train balanced accuracy: 0.9822774027283608\n",
+      "Lev 1 test accuracy: 0.9385714285714286\n",
+      "Lev 1 test balanced accuracy: 0.9382828154894179\n",
       "\n",
-      "Lev 2 train accuracy: 0.9961108024446385\n",
-      "Lev 2 train balanced accuracy: 0.9976477937091299\n",
-      "Lev 2 test accuracy: 0.9357142857142857\n",
-      "Lev 2 test balanced accuracy: 0.8952881366745619\n",
+      "Lev 2 train accuracy: 0.9719617823019913\n",
+      "Lev 2 train balanced accuracy: 0.9831936934349239\n",
+      "Lev 2 test accuracy: 0.915\n",
+      "Lev 2 test balanced accuracy: 0.9122939140656459\n",
       "\n",
       "Number of unique level 1 categories predicted in train: 6\n",
       "Number of unique level 1 categories predicted in test: 6\n",
@@ -1317,8 +1317,22 @@
     }
    ],
    "source": [
+    "acc_list_train = []\n",
+    "bal_acc_list_train = []\n",
+    "precision_list_train = []\n",
+    "recall_list_train = []\n",
+    "f1_list_train = []\n",
+    "mcc_list_train = []\n",
+    "\n",
+    "acc_list_test = []\n",
+    "bal_acc_list_test = []\n",
+    "precision_list_test = []\n",
+    "recall_list_test = []\n",
+    "f1_list_test = []\n",
+    "mcc_list_test = []\n",
+    "\n",
     "for i in range(1):\n",
-    "    train, test = train_test_split(lab, test_size=0.1, random_state=i)\n",
+    "    train, test = train_test_split(lab, test_size=0.2, random_state=i)\n",
     "    print(f'Number of unique level 1 categories in train: {train[y_cols[1]].nunique()}')\n",
     "    print(f'Number of unique level 1 categories in test: {test[y_cols[1]].nunique()}')\n",
     "    print(f'Number of unique level 2 categories in train: {train[y_cols[2]].nunique()}')\n",
@@ -1335,9 +1349,10 @@
     "    y_test2 = test[y_cols[2]]\n",
     "\n",
     "    mod = RandomForestClassifier(n_estimators=400, \n",
-    "                                 min_samples_leaf=4, \n",
-    "                                 max_depth=20,\n",
-    "                                 class_weight='balanced')\n",
+    "                                 min_samples_leaf=10, \n",
+    "                                 max_depth=25,\n",
+    "                                 class_weight='balanced'\n",
+    "                                )\n",
     "\n",
     "    clf2 = mod\n",
     "    clf2.fit(X_train, y_train2)\n",
@@ -1362,7 +1377,66 @@
     "    print(f'Number of unique level 1 categories predicted in train: {len(np.unique(y_train_pred1))}')\n",
     "    print(f'Number of unique level 1 categories predicted in test: {len(np.unique(y_test_pred1))}')    \n",
     "    print(f'Number of unique level 2 categories predicted in train: {len(np.unique(y_train_pred2))}')\n",
-    "    print(f'Number of unique level 2 categories predicted in test: {len(np.unique(y_test_pred2))}\\n')    "
+    "    print(f'Number of unique level 2 categories predicted in test: {len(np.unique(y_test_pred2))}\\n')    \n",
+    "    \n",
+    "    acc_list_train.append(accuracy_score(y_train2, y_train_pred2))\n",
+    "    bal_acc_list_train.append(balanced_accuracy_score(y_train2, y_train_pred2))\n",
+    "    precision_list_train.append(precision_score(y_train2, y_train_pred2, average='weighted'))\n",
+    "    recall_list_train.append(recall_score(y_train2, y_train_pred2, average='weighted'))\n",
+    "    f1_list_train.append(f1_score(y_train2, y_train_pred2, average='weighted'))\n",
+    "    mcc_list_train.append(matthews_corrcoef(y_train2, y_train_pred2))\n",
+    "    \n",
+    "    acc_list_test.append(accuracy_score(y_test2, y_test_pred2))\n",
+    "    bal_acc_list_test.append(balanced_accuracy_score(y_test2, y_test_pred2))\n",
+    "    precision_list_test.append(precision_score(y_test2, y_test_pred2, average='weighted'))\n",
+    "    recall_list_test.append(recall_score(y_test2, y_test_pred2, average='weighted'))\n",
+    "    f1_list_test.append(f1_score(y_test2, y_test_pred2, average='weighted'))\n",
+    "    mcc_list_test.append(matthews_corrcoef(y_test2, y_test_pred2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "e38464a2-6819-4d29-84a1-88b9af266bf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train\n",
+      "accuracy: 0.9719617823019913\n",
+      "balanced accuracy: 0.9831936934349239\n",
+      "precision: 0.9733239074549537\n",
+      "recall: 0.9719617823019913\n",
+      "f1: 0.9719375120619279\n",
+      "mcc: 0.9687025006467553\n",
+      "test\n",
+      "accuracy: 0.915\n",
+      "balanced accuracy: 0.9122939140656459\n",
+      "precision: 0.9180582855860961\n",
+      "recall: 0.915\n",
+      "f1: 0.9148378139711162\n",
+      "mcc: 0.9051190089089078\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('train')\n",
+    "print(f'accuracy: {statistics.mean(acc_list_train)}')\n",
+    "print(f'balanced accuracy: {statistics.mean(bal_acc_list_train)}')\n",
+    "print(f'precision: {statistics.mean(precision_list_train)}')\n",
+    "print(f'recall: {statistics.mean(recall_list_train)}')\n",
+    "print(f'f1: {statistics.mean(f1_list_train)}')\n",
+    "print(f'mcc: {statistics.mean(mcc_list_train)}')\n",
+    "\n",
+    "print('test')\n",
+    "print(f'accuracy: {statistics.mean(acc_list_test)}')\n",
+    "print(f'balanced accuracy: {statistics.mean(bal_acc_list_test)}')\n",
+    "print(f'precision: {statistics.mean(precision_list_test)}')\n",
+    "print(f'recall: {statistics.mean(recall_list_test)}')\n",
+    "print(f'f1: {statistics.mean(f1_list_test)}')\n",
+    "print(f'mcc: {statistics.mean(mcc_list_test)}')"
    ]
   },
   {
@@ -1548,7 +1622,7 @@
    "outputs": [],
    "source": [
     "# save level 2 cereal categories\n",
-    "pred.to_csv('../../future_of_food/NDNS UK/predictions/predictions_cereals_lev2_manuallabels_nonHI_RF_15Oct2024.csv', \n",
+    "pred.to_csv('../../SFS/NDNS UK/predictions/predictions_cereals_lev2_manuallabels_nonHI_RF_15Oct2024.csv', \n",
     "                      index=False)"
    ]
   },
