--- a/product_impacts/product_cat/veg.ipynb
+++ b/product_impacts/product_cat/veg.ipynb
@@ -12,6 +12,13 @@
      "text": [
       "\u001b[34mproduct_impacts\u001b[m\u001b[m\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "python(11973) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
+     ]
     }
    ],
    "source": [
@@ -32,6 +39,7 @@
     "from skimpy import skim\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
+    "import statistics\n",
     "from sentence_transformers import SentenceTransformer, util\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.manifold import TSNE\n",
@@ -45,7 +53,7 @@
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.metrics import accuracy_score, matthews_corrcoef, f1_score, mean_squared_error, r2_score, roc_auc_score, balanced_accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, matthews_corrcoef, f1_score, mean_squared_error, r2_score, roc_auc_score, balanced_accuracy_score, precision_score, recall_score\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sklearn import preprocessing\n",
     "from sklearn.feature_selection import mutual_info_classif\n",
@@ -63,7 +71,15 @@
    "execution_count": 3,
    "id": "d501d8fb-9b8c-4c3c-8e42-f86a37401f5e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "python(12028) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -100,8 +116,8 @@
     }
    ],
    "source": [
-    "ndns = get_ndns_cats('../../future_of_food/NDNS UK/ndns_edited.csv')\n",
-    "products = get_products('../../future_of_food/foodDB_23June/products.csv')\n",
+    "ndns = get_ndns_cats('../../SFS/NDNS UK/ndns_edited.csv')\n",
+    "products = get_products()\n",
     "labelled_data, non_food_products = get_ndns_matches(\n",
     "    ndns, products)"
    ]
@@ -139,7 +155,7 @@
    "outputs": [],
    "source": [
     "# lev 0 predictions\n",
-    "predicted_data = pd.read_csv('../../future_of_food/NDNS UK/predictions/predictions_lev0_manuallabels_nonHI_RF_withcorrections_14Oct2024.csv')"
+    "predicted_data = pd.read_csv('../../SFS/NDNS UK/predictions/predictions_lev0_manuallabels_nonHI_RF_withcorrections_14Oct2024.csv')"
    ]
   },
   {
@@ -182,7 +198,7 @@
        "Alcoholic Beverages                     15150\n",
        "Fish and Fish Dishes                     9302\n",
        "Fruit                                    7343\n",
-       "Savoury Snacks                           6453\n",
+       "Savoury Snacks                           6460\n",
        "Not Food                                 5086\n",
        "Nuts and Seeds                           5057\n",
        "Fat Spreads                              3811\n",
@@ -190,7 +206,6 @@
        "Eggs and Egg Dishes                      1315\n",
        "Dietary Supplements                       622\n",
        "Artificial Sweeteners                     404\n",
-       "Savoury Snack                               7\n",
        "Name: parentcategory_pred, dtype: int64"
       ]
      },
@@ -246,7 +261,7 @@
     {
      "data": {
       "text/plain": [
-       "(5456, 12)"
+       "(5452, 12)"
       ]
      },
      "execution_count": 13,
@@ -267,15 +282,15 @@
     {
      "data": {
       "text/plain": [
-       "Other vegetable products and dishes                              1197\n",
+       "Other vegetable products and dishes                              1198\n",
        "Tomatoes                                                          648\n",
-       "Meat alternatives (including ready meals and homemade dishes)     636\n",
-       "Beans and pulses (including ready meal & homemade dishes)         551\n",
+       "Meat alternatives (including ready meals and homemade dishes)     635\n",
+       "Beans and pulses (including ready meal & homemade dishes)         548\n",
        "Other vegetables                                                  468\n",
        "Other potato products and dishes                                  458\n",
        "Other fried/roast/baked potatoes                                  397\n",
        "Peas                                                              268\n",
-       "Baked beans                                                       263\n",
+       "Baked beans                                                       262\n",
        "Leafy green vegetables                                            185\n",
        "Chips purchased including takeaway                                167\n",
        "Carrots                                                           143\n",
@@ -301,8 +316,7 @@
     {
      "data": {
       "text/plain": [
-       "Vegetables (not raw)                                   3480\n",
-       "Salad and other raw vegetables                          954\n",
+       "Vegetables                                             4430\n",
        "Chips, fried and roast potatoes and potato products     564\n",
        "Other potatoes, potato salads and dishes                458\n",
        "Name: mainfoodgroupdesc, dtype: int64"
@@ -621,15 +635,15 @@
     {
      "data": {
       "text/plain": [
-       "Other vegetables                                                 871\n",
+       "Other vegetables                                                 872\n",
        "Tomatoes                                                         648\n",
-       "Meat alternatives (including ready meals and homemade dishes)    642\n",
-       "Beans and pulses (including ready meal & homemade dishes)        576\n",
+       "Meat alternatives (including ready meals and homemade dishes)    641\n",
+       "Beans and pulses (including ready meal & homemade dishes)        573\n",
        "Other vegetable products and dishes                              551\n",
        "Leafy green vegetables                                           467\n",
        "Chips purchased including takeaway                               387\n",
        "Other potato products and dishes                                 384\n",
-       "Baked beans                                                      263\n",
+       "Baked beans                                                      262\n",
        "Peas                                                             259\n",
        "Other fried/roast/baked potatoes                                 189\n",
        "Carrots                                                          144\n",
@@ -655,7 +669,7 @@
     {
      "data": {
       "text/plain": [
-       "Vegetables                                             4496\n",
+       "Vegetables                                             4492\n",
        "Chips, fried and roast potatoes and potato products     576\n",
        "Other potatoes, potato salads and dishes                384\n",
        "Name: mainfoodgroupdesc, dtype: int64"
@@ -1171,7 +1185,7 @@
     {
      "data": {
       "text/plain": [
-       "(6286, 12)"
+       "(6282, 12)"
       ]
      },
      "execution_count": 25,
@@ -1192,9 +1206,9 @@
     {
      "data": {
       "text/plain": [
-       "Other vegetables                                                 1051\n",
-       "Beans and pulses (including ready meal & homemade dishes)         845\n",
-       "Meat alternatives (including ready meals and homemade dishes)     749\n",
+       "Other vegetables                                                 1052\n",
+       "Beans and pulses (including ready meal & homemade dishes)         841\n",
+       "Meat alternatives (including ready meals and homemade dishes)     748\n",
        "Other vegetable products and dishes                               706\n",
        "Tomatoes                                                          642\n",
        "Leafy green vegetables                                            484\n",
@@ -1238,9 +1252,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_embeddings = np.load('../../future_of_food/bert/all_embeddings_all3.npy')\n",
-    "tsne_results = get_tsne(query_embeddings, '../../future_of_food/bert/tsne_results_all3.npy')\n",
-    "product_ids = np.load('../../future_of_food/bert/all_ids_all3.npy')\n",
+    "query_embeddings = np.load('../../SFS/bert/all_embeddings_all3.npy')\n",
+    "tsne_results = get_tsne(query_embeddings, '../../SFS/bert/tsne_results_all3.npy')\n",
+    "product_ids = np.load('../../SFS/bert/all_ids_all3.npy')\n",
     "\n",
     "features = pd.DataFrame(data=query_embeddings)\n",
     "id_col = 'product_id'\n",
@@ -1267,15 +1281,15 @@
       "Number of unique level 2 categories in train: 13\n",
       "Number of unique level 2 categories in test: 13\n",
       "\n",
-      "Lev 1 train accuracy: 0.9916917093866007\n",
-      "Lev 1 train balanced accuracy: 0.9902960220540998\n",
-      "Lev 1 test accuracy: 0.9602543720190779\n",
-      "Lev 1 test balanced accuracy: 0.9386222750554616\n",
+      "Lev 1 train accuracy: 0.9930348258706467\n",
+      "Lev 1 train balanced accuracy: 0.9929459651783779\n",
+      "Lev 1 test accuracy: 0.9713603818615751\n",
+      "Lev 1 test balanced accuracy: 0.9466693582950544\n",
       "\n",
-      "Lev 2 train accuracy: 0.969948736079194\n",
-      "Lev 2 train balanced accuracy: 0.9801954559097006\n",
-      "Lev 2 test accuracy: 0.8871224165341812\n",
-      "Lev 2 test balanced accuracy: 0.9012796482309343\n",
+      "Lev 2 train accuracy: 0.9717412935323383\n",
+      "Lev 2 train balanced accuracy: 0.9818694691034372\n",
+      "Lev 2 test accuracy: 0.8854415274463007\n",
+      "Lev 2 test balanced accuracy: 0.9045452289729382\n",
       "\n",
       "Number of unique level 1 categories predicted in train: 3\n",
       "Number of unique level 1 categories predicted in test: 3\n",
@@ -1286,8 +1300,22 @@
     }
    ],
    "source": [
+    "acc_list_train = []\n",
+    "bal_acc_list_train = []\n",
+    "precision_list_train = []\n",
+    "recall_list_train = []\n",
+    "f1_list_train = []\n",
+    "mcc_list_train = []\n",
+    "\n",
+    "acc_list_test = []\n",
+    "bal_acc_list_test = []\n",
+    "precision_list_test = []\n",
+    "recall_list_test = []\n",
+    "f1_list_test = []\n",
+    "mcc_list_test = []\n",
+    "\n",
     "for i in range(1):\n",
-    "    train, test = train_test_split(lab, test_size=0.1, random_state=i)\n",
+    "    train, test = train_test_split(lab, test_size=0.2, random_state=i)\n",
     "    print(f'Number of unique level 1 categories in train: {train[y_cols[1]].nunique()}')\n",
     "    print(f'Number of unique level 1 categories in test: {test[y_cols[1]].nunique()}')\n",
     "    print(f'Number of unique level 2 categories in train: {train[y_cols[2]].nunique()}')\n",
@@ -1303,9 +1331,9 @@
     "    y_test1 = test[y_cols[1]]\n",
     "    y_test2 = test[y_cols[2]]\n",
     "\n",
-    "    mod = RandomForestClassifier(n_estimators=500, \n",
+    "    mod = RandomForestClassifier(n_estimators=400, \n",
     "                                 min_samples_leaf=10, \n",
-    "                                 max_depth=20,\n",
+    "                                 max_depth=25,\n",
     "                                 class_weight='balanced'\n",
     "                                )\n",
     "\n",
@@ -1332,7 +1360,66 @@
     "    print(f'Number of unique level 1 categories predicted in train: {len(np.unique(y_train_pred1))}')\n",
     "    print(f'Number of unique level 1 categories predicted in test: {len(np.unique(y_test_pred1))}')    \n",
     "    print(f'Number of unique level 2 categories predicted in train: {len(np.unique(y_train_pred2))}')\n",
-    "    print(f'Number of unique level 2 categories predicted in test: {len(np.unique(y_test_pred2))}\\n')    "
+    "    print(f'Number of unique level 2 categories predicted in test: {len(np.unique(y_test_pred2))}\\n')    \n",
+    "    \n",
+    "    acc_list_train.append(accuracy_score(y_train2, y_train_pred2))\n",
+    "    bal_acc_list_train.append(balanced_accuracy_score(y_train2, y_train_pred2))\n",
+    "    precision_list_train.append(precision_score(y_train2, y_train_pred2, average='weighted'))\n",
+    "    recall_list_train.append(recall_score(y_train2, y_train_pred2, average='weighted'))\n",
+    "    f1_list_train.append(f1_score(y_train2, y_train_pred2, average='weighted'))\n",
+    "    mcc_list_train.append(matthews_corrcoef(y_train2, y_train_pred2))\n",
+    "    \n",
+    "    acc_list_test.append(accuracy_score(y_test2, y_test_pred2))\n",
+    "    bal_acc_list_test.append(balanced_accuracy_score(y_test2, y_test_pred2))\n",
+    "    precision_list_test.append(precision_score(y_test2, y_test_pred2, average='weighted'))\n",
+    "    recall_list_test.append(recall_score(y_test2, y_test_pred2, average='weighted'))\n",
+    "    f1_list_test.append(f1_score(y_test2, y_test_pred2, average='weighted'))\n",
+    "    mcc_list_test.append(matthews_corrcoef(y_test2, y_test_pred2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "bfcbd51b-5410-42d5-b776-450b00caea01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train\n",
+      "accuracy: 0.9717412935323383\n",
+      "balanced accuracy: 0.9818694691034372\n",
+      "precision: 0.972490841353072\n",
+      "recall: 0.9717412935323383\n",
+      "f1: 0.9716549221566\n",
+      "mcc: 0.9685695645149028\n",
+      "test\n",
+      "accuracy: 0.8854415274463007\n",
+      "balanced accuracy: 0.9045452289729382\n",
+      "precision: 0.8855693486268453\n",
+      "recall: 0.8854415274463007\n",
+      "f1: 0.8843255243280169\n",
+      "mcc: 0.872871828329763\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('train')\n",
+    "print(f'accuracy: {statistics.mean(acc_list_train)}')\n",
+    "print(f'balanced accuracy: {statistics.mean(bal_acc_list_train)}')\n",
+    "print(f'precision: {statistics.mean(precision_list_train)}')\n",
+    "print(f'recall: {statistics.mean(recall_list_train)}')\n",
+    "print(f'f1: {statistics.mean(f1_list_train)}')\n",
+    "print(f'mcc: {statistics.mean(mcc_list_train)}')\n",
+    "\n",
+    "print('test')\n",
+    "print(f'accuracy: {statistics.mean(acc_list_test)}')\n",
+    "print(f'balanced accuracy: {statistics.mean(bal_acc_list_test)}')\n",
+    "print(f'precision: {statistics.mean(precision_list_test)}')\n",
+    "print(f'recall: {statistics.mean(recall_list_test)}')\n",
+    "print(f'f1: {statistics.mean(f1_list_test)}')\n",
+    "print(f'mcc: {statistics.mean(mcc_list_test)}')"
    ]
   },
   {
@@ -1509,7 +1596,7 @@
    "outputs": [],
    "source": [
     "# save level 2 cereal categories\n",
-    "pred.to_csv('../../future_of_food/NDNS UK/predictions/predictions_veg_lev2_manuallabels_nonHI_RF_15Oct2024.csv', \n",
+    "pred.to_csv('../../SFS/NDNS UK/predictions/predictions_veg_lev2_manuallabels_nonHI_RF_15Oct2024.csv', \n",
     "                      index=False)"
    ]
   },
