--- a/product_impacts/product_cat/fats.ipynb
+++ b/product_impacts/product_cat/fats.ipynb
@@ -12,6 +12,13 @@
      "text": [
       "\u001b[34mproduct_impacts\u001b[m\u001b[m\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "python(95886) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
+     ]
     }
    ],
    "source": [
@@ -32,6 +39,7 @@
     "from skimpy import skim\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
+    "import statistics\n",
     "from sentence_transformers import SentenceTransformer, util\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.manifold import TSNE\n",
@@ -45,7 +53,7 @@
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.metrics import accuracy_score, matthews_corrcoef, f1_score, mean_squared_error, r2_score, roc_auc_score, balanced_accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, matthews_corrcoef, f1_score, mean_squared_error, r2_score, roc_auc_score, balanced_accuracy_score, precision_score, recall_score\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sklearn import preprocessing\n",
     "from sklearn.feature_selection import mutual_info_classif\n",
@@ -63,7 +71,15 @@
    "execution_count": 3,
    "id": "d501d8fb-9b8c-4c3c-8e42-f86a37401f5e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "python(95939) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -100,8 +116,8 @@
     }
    ],
    "source": [
-    "ndns = get_ndns_cats('../../future_of_food/NDNS UK/ndns_edited.csv')\n",
-    "products = get_products('../../future_of_food/foodDB_23June/products.csv')\n",
+    "ndns = get_ndns_cats('../../SFS/NDNS UK/ndns_edited.csv')\n",
+    "products = get_products()\n",
     "labelled_data, non_food_products = get_ndns_matches(\n",
     "    ndns, products)"
    ]
@@ -128,7 +144,7 @@
    "outputs": [],
    "source": [
     "# lev 0 predictions\n",
-    "predicted_data = pd.read_csv('../../future_of_food/NDNS UK/predictions/predictions_lev0_manuallabels_nonHI_RF_withcorrections_14Oct2024.csv')"
+    "predicted_data = pd.read_csv('../../SFS/NDNS UK/predictions/predictions_lev0_manuallabels_nonHI_RF_withcorrections_14Oct2024.csv')"
    ]
   },
   {
@@ -171,7 +187,7 @@
        "Alcoholic Beverages                     15150\n",
        "Fish and Fish Dishes                     9302\n",
        "Fruit                                    7343\n",
-       "Savoury Snacks                           6453\n",
+       "Savoury Snacks                           6460\n",
        "Not Food                                 5086\n",
        "Nuts and Seeds                           5057\n",
        "Fat Spreads                              3811\n",
@@ -179,7 +195,6 @@
        "Eggs and Egg Dishes                      1315\n",
        "Dietary Supplements                       622\n",
        "Artificial Sweeteners                     404\n",
-       "Savoury Snack                               7\n",
        "Name: parentcategory_pred, dtype: int64"
       ]
      },
@@ -821,9 +836,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_embeddings = np.load('../../future_of_food/bert/all_embeddings_all3.npy')\n",
-    "tsne_results = get_tsne(query_embeddings, '../../future_of_food/bert/tsne_results_all3.npy')\n",
-    "product_ids = np.load('../../future_of_food/bert/all_ids_all3.npy')\n",
+    "query_embeddings = np.load('../../SFS/bert/all_embeddings_all3.npy')\n",
+    "tsne_results = get_tsne(query_embeddings, '../../SFS/bert/tsne_results_all3.npy')\n",
+    "product_ids = np.load('../../SFS/bert/all_ids_all3.npy')\n",
     "\n",
     "features = pd.DataFrame(data=query_embeddings)\n",
     "id_col = 'product_id'\n",
@@ -837,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "2e2101da-22e9-4d4a-b19b-ddf9a0b6b780",
    "metadata": {},
    "outputs": [
@@ -850,15 +865,15 @@
       "Number of unique level 2 categories in train: 10\n",
       "Number of unique level 2 categories in test: 10\n",
       "\n",
-      "Lev 1 train accuracy: 0.9611872146118722\n",
-      "Lev 1 train balanced accuracy: 0.9643494580155739\n",
-      "Lev 1 test accuracy: 0.9178082191780822\n",
-      "Lev 1 test balanced accuracy: 0.8531844499586434\n",
+      "Lev 1 train accuracy: 0.961472602739726\n",
+      "Lev 1 train balanced accuracy: 0.9612321205677279\n",
+      "Lev 1 test accuracy: 0.8972602739726028\n",
+      "Lev 1 test balanced accuracy: 0.846864697802198\n",
       "\n",
-      "Lev 2 train accuracy: 0.9596651445966514\n",
-      "Lev 2 train balanced accuracy: 0.9628145760014813\n",
-      "Lev 2 test accuracy: 0.8972602739726028\n",
-      "Lev 2 test balanced accuracy: 0.8616003148897885\n",
+      "Lev 2 train accuracy: 0.9580479452054794\n",
+      "Lev 2 train balanced accuracy: 0.9580766988707557\n",
+      "Lev 2 test accuracy: 0.8835616438356164\n",
+      "Lev 2 test balanced accuracy: 0.8820026636123185\n",
       "\n",
       "Number of unique level 1 categories predicted in train: 5\n",
       "Number of unique level 1 categories predicted in test: 5\n",
@@ -869,8 +884,22 @@
     }
    ],
    "source": [
+    "acc_list_train = []\n",
+    "bal_acc_list_train = []\n",
+    "precision_list_train = []\n",
+    "recall_list_train = []\n",
+    "f1_list_train = []\n",
+    "mcc_list_train = []\n",
+    "\n",
+    "acc_list_test = []\n",
+    "bal_acc_list_test = []\n",
+    "precision_list_test = []\n",
+    "recall_list_test = []\n",
+    "f1_list_test = []\n",
+    "mcc_list_test = []\n",
+    "\n",
     "for i in range(1):\n",
-    "    train, test = train_test_split(lab, test_size=0.1, random_state=i)\n",
+    "    train, test = train_test_split(lab, test_size=0.2, random_state=i)\n",
     "    print(f'Number of unique level 1 categories in train: {train[y_cols[1]].nunique()}')\n",
     "    print(f'Number of unique level 1 categories in test: {test[y_cols[1]].nunique()}')\n",
     "    print(f'Number of unique level 2 categories in train: {train[y_cols[2]].nunique()}')\n",
@@ -888,8 +917,9 @@
     "\n",
     "    mod = RandomForestClassifier(n_estimators=400, \n",
     "                                 min_samples_leaf=10, \n",
-    "                                 max_depth=20,\n",
-    "                                 class_weight='balanced')\n",
+    "                                 max_depth=25,\n",
+    "                                 class_weight='balanced'\n",
+    "                                )\n",
     "\n",
     "    clf2 = mod\n",
     "    clf2.fit(X_train, y_train2)\n",
@@ -914,7 +944,66 @@
     "    print(f'Number of unique level 1 categories predicted in train: {len(np.unique(y_train_pred1))}')\n",
     "    print(f'Number of unique level 1 categories predicted in test: {len(np.unique(y_test_pred1))}')    \n",
     "    print(f'Number of unique level 2 categories predicted in train: {len(np.unique(y_train_pred2))}')\n",
-    "    print(f'Number of unique level 2 categories predicted in test: {len(np.unique(y_test_pred2))}\\n')    "
+    "    print(f'Number of unique level 2 categories predicted in test: {len(np.unique(y_test_pred2))}\\n')    \n",
+    "    \n",
+    "    acc_list_train.append(accuracy_score(y_train2, y_train_pred2))\n",
+    "    bal_acc_list_train.append(balanced_accuracy_score(y_train2, y_train_pred2))\n",
+    "    precision_list_train.append(precision_score(y_train2, y_train_pred2, average='weighted'))\n",
+    "    recall_list_train.append(recall_score(y_train2, y_train_pred2, average='weighted'))\n",
+    "    f1_list_train.append(f1_score(y_train2, y_train_pred2, average='weighted'))\n",
+    "    mcc_list_train.append(matthews_corrcoef(y_train2, y_train_pred2))\n",
+    "    \n",
+    "    acc_list_test.append(accuracy_score(y_test2, y_test_pred2))\n",
+    "    bal_acc_list_test.append(balanced_accuracy_score(y_test2, y_test_pred2))\n",
+    "    precision_list_test.append(precision_score(y_test2, y_test_pred2, average='weighted'))\n",
+    "    recall_list_test.append(recall_score(y_test2, y_test_pred2, average='weighted'))\n",
+    "    f1_list_test.append(f1_score(y_test2, y_test_pred2, average='weighted'))\n",
+    "    mcc_list_test.append(matthews_corrcoef(y_test2, y_test_pred2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "38587385-4d5b-4c0d-a515-d88361938545",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train\n",
+      "accuracy: 0.9580479452054794\n",
+      "balanced accuracy: 0.9580766988707557\n",
+      "precision: 0.9599367622382857\n",
+      "recall: 0.9580479452054794\n",
+      "f1: 0.9582979512450288\n",
+      "mcc: 0.9461993926377138\n",
+      "test\n",
+      "accuracy: 0.8835616438356164\n",
+      "balanced accuracy: 0.8820026636123185\n",
+      "precision: 0.8979246506988352\n",
+      "recall: 0.8835616438356164\n",
+      "f1: 0.8870923206100831\n",
+      "mcc: 0.85089796383658\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('train')\n",
+    "print(f'accuracy: {statistics.mean(acc_list_train)}')\n",
+    "print(f'balanced accuracy: {statistics.mean(bal_acc_list_train)}')\n",
+    "print(f'precision: {statistics.mean(precision_list_train)}')\n",
+    "print(f'recall: {statistics.mean(recall_list_train)}')\n",
+    "print(f'f1: {statistics.mean(f1_list_train)}')\n",
+    "print(f'mcc: {statistics.mean(mcc_list_train)}')\n",
+    "\n",
+    "print('test')\n",
+    "print(f'accuracy: {statistics.mean(acc_list_test)}')\n",
+    "print(f'balanced accuracy: {statistics.mean(bal_acc_list_test)}')\n",
+    "print(f'precision: {statistics.mean(precision_list_test)}')\n",
+    "print(f'recall: {statistics.mean(recall_list_test)}')\n",
+    "print(f'f1: {statistics.mean(f1_list_test)}')\n",
+    "print(f'mcc: {statistics.mean(mcc_list_test)}')"
    ]
   },
   {
@@ -1089,7 +1178,7 @@
    "outputs": [],
    "source": [
     "# save level 2 cereal categories\n",
-    "pred.to_csv('../../future_of_food/NDNS UK/predictions/predictions_fats_lev2_manuallabels_nonHI_RF_15Oct2024.csv', \n",
+    "pred.to_csv('../../SFS/NDNS UK/predictions/predictions_fats_lev2_manuallabels_nonHI_RF_15Oct2024.csv', \n",
     "                      index=False)"
    ]
   },
